--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -4,6 +4,196 @@
   padding: 0;
   box-sizing: border-box;
 }
-img {
-  -webkit-user-drag: none;
+body {
+  color: #333;
+  background-image: url(../img/whiteboard_back.png);
+  background-size: 100vw;
+}
+
+/* Top Page */
+.top {
+  margin: 0 0 150px 0;
+}
+h1 {
+  display: block;
+  text-align: center;
+  margin: 25vh auto 20px;
+}
+h1 img {
+  width: 400px;
+}
+.form {
+  width: 350px;
+  margin: 20px auto;
+}
+.input {
+  font-size: 15px;
+  background: none;
+  border: none;
+  outline: none;
+  width: 310px;
+  margin: 0 15px 0 0;
+  padding: 5px;
+  border-bottom: 1px dashed #333;
+}
+::placeholder {
+  color: #757575;
+  opacity: .5;
+}
+.link {
+  display: block;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  width: 250px;
+  margin: 0 auto;
+  padding: 5px 10px;
+  background: #3597EC;
+  border-radius: 20px;
+  transition: .5s;
+}
+.link-button {
+  display: inline-block;
+  transition: .5s;
+}
+.link:hover,
+.link-button:hover {
+  opacity: .5;
+}
+.or {
+  text-align: center;
+  margin: 10px;
+}
+.description {
+  text-align: center;
+  margin: 0 0 150px 0;
+}
+.description h3 {
+  font-size: 20px;
+}
+.description h3 span {
+  font-size: 12px;
+}
+.description h3::after {
+  content: "";
+  display: block;
+  width: 50px;
+  margin: 25px auto;
+  border-bottom: 1px solid #333;
+}
+.description p {
+  font-size: 15px;
+  margin: 0 0 5px 0;
+}
+.howto {
+  text-align: center;
+  margin: 0 0 150px 0;
+}
+.howto h3 {
+  font-size: 20px;
+}
+.howto h3 span {
+  display: block;
+  font-size: 10px;
+  color: #696969;
+  margin: 0 0 40px 0;
+}
+.howto h4 {
+  font-size: 16px;
+  margin: 0 0 40px 0;
+}
+.howto .howto-items {
+  display: flex;
+  justify-content: center;
+  width: 75%;
+  margin: 0 auto;
+}
+.howto .howto-items .howto-item {
+  margin: 0 30px;
+  width: 20%;
+}
+.howto .howto-items .howto-item img {
+  width: 100%;
+  margin: 0 0 15px 0;
+}
+.howto .howto-items .howto-item h5 {
+  font-size: 14px;
+  margin: 0 0 15px 0;
+}
+.howto .howto-items .howto-item p {
+  font-size: 12px;
+  line-height: 1.75;
+}
+
+/* Board Page */
+.white-board {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+}
+.create-button {
+  display: block;
+  width: 250px;
+  top: 50px;
+  left: 150px;
+  position: fixed;
+  transition: .5s;
+}
+.create-button:hover {
+  opacity: .5;
+}
+.back-link {
+  display: block;
+  text-decoration: none;
+  font-size: 30px;
+  right: 150px;
+  top: 50px;
+  position: fixed;
+  transition: .5s;
+}
+.back-link img {
+  width: 100px;
+}
+.back-link:hover {
+  opacity: .5;
+}
+.board-item {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.75em;
+  color: #273d3d;
+  width: 160px;
+  padding: 40px 10px 10px 10px;
+  box-shadow: 0 0 3px rgb(0, 0, 0, .3);
+}
+.board-textarea {
+  font-size: 15px;
+  line-height: 1.5em;
+  color: #273d3d;
+  width: 100%;
+  border: none;
+  background: none;
+  resize:vertical;
+}
+.delete-icon {
+  display: block;
+  width: 10px;
+  height: 10px;
+  top: 10px;
+  right: 10px;
+  position: absolute;
+}
+.ColorSelector {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+}
+.ColorCircle {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  margin: 2px;
+  border: solid 1px #979797;
+  border-radius: 50%;
 }
